Added Google Analytics and disqus support

--- a/jbake.properties
+++ b/jbake.properties
@@ -1,4 +1,4 @@
-site.host=https://SiddheshRane.github.io
+site.host=https://SiddheshRane.github.io/jbake-clean-blog-template
 destination.folder=docs
 render.tags=true
 render.sitemap=true
@@ -11,12 +11,14 @@ render.sitemap=true
 
 #Clean Blog theme specific options
 site.title=Clean blog
-site.description=A blog about stuff that I do
+site.description=Blog description
 site.author=Siddhesh Rane
 #Comment below options to disable, dont leave blank
 github.username=SiddheshRane
 twitter.username=unrealSiddhesh
 linkedin.username=siddhesh-rane
+disqus.shortname=siddhesh
+google.trackingID=UA-100343123-2
 
 #Clean Blog theme template files
 template.masterindex.file=index.thyme
