Twitter card support added

--- a/jbake.properties
+++ b/jbake.properties
@@ -3,15 +3,10 @@ destination.folder=docs
 render.tags=true
 render.sitemap=true
 
-#I set asset folder the same as content folder so that my images can be right next to the source file. This helps for previews in AsciidocFX
-#NOTE:An unwanted side effect is that the source files are copied to the output
-#That is not a problem for .md .adoc files as the rendered files have .html extension
-#But for .html source the output filename is the same. Since assets are copied last the rendered html is replced by the source
-#asset.folder=content
 
 #Clean Blog theme specific options
-site.title=Clean blog
-site.description=Blog description
+site.title=Clean Blog
+site.description=Bootstrap based template for JBake.
 site.author=Siddhesh Rane
 #Comment below options to disable, dont leave blank
 github.username=SiddheshRane
@@ -19,6 +14,9 @@ twitter.username=unrealSiddhesh
 linkedin.username=siddhesh-rane
 disqus.shortname=siddhesh
 google.trackingID=UA-100343123-2
+
+
+#Copy following as is
 
 #Clean Blog theme template files
 template.masterindex.file=index.thyme
